fix an issue with horizontal scrolling on mobile view

--- a/template/default/SASS/inventory.scss
+++ b/template/default/SASS/inventory.scss
@@ -114,7 +114,8 @@ a
 
 
 #header_section, #footer_section{
-    padding: 0 15px;
+    padding: 0px;
+    margin: 0px;
 }
 #header_section > div, #footer_section > div{
     padding: 0px;
